frontend/lang/ScriptGrammarParser.ts
// Generated from C:/Users/jun.dai/Documents/GitHub/lea/grammar/ScriptGrammar.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import ScriptGrammarListener from "./ScriptGrammarListener.js";
import ScriptGrammarVisitor from "./ScriptGrammarVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class ScriptGrammarParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly WS = 49;
	public static readonly SEMI = 50;
	public static readonly NUMBER = 51;
	public static readonly HEX = 52;
	public static readonly OCT = 53;
	public static readonly BIN = 54;
	public static readonly ID = 55;
	public static readonly STRING = 56;
	public static readonly BLOCK_COMMENT = 57;
	public static readonly LINE_COMMENT = 58;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_declarations = 1;
	public static readonly RULE_classDeclaration = 2;
	public static readonly RULE_members = 3;
	public static readonly RULE_member = 4;
	public static readonly RULE_variableDeclaration = 5;
	public static readonly RULE_functionDeclaration = 6;
	public static readonly RULE_params = 7;
	public static readonly RULE_statements = 8;
	public static readonly RULE_blockStatement = 9;
	public static readonly RULE_ifStatement = 10;
	public static readonly RULE_multiIfStatement = 11;
	public static readonly RULE_elseStatement = 12;
	public static readonly RULE_forStatement = 13;
	public static readonly RULE_whileStatement = 14;
	public static readonly RULE_returnStatement = 15;
	public static readonly RULE_continueStatement = 16;
	public static readonly RULE_breakStatement = 17;
	public static readonly RULE_expression = 18;
	public static readonly RULE_accessExpression = 19;
	public static readonly RULE_arguments = 20;
	public static readonly literalNames: (string | null)[] = [ null, "'class'", 
                                                            "'extend'", 
                                                            "'{'", "'}'", 
                                                            "'private'", 
                                                            "'protected'", 
                                                            "'public'", 
                                                            "'static'", 
                                                            "'='", "'def'", 
                                                            "'('", "')'", 
                                                            "','", "'else'", 
                                                            "'if'", "'for'", 
                                                            "'in'", "'while'", 
                                                            "'return'", 
                                                            "'continue'", 
                                                            "'break'", "'!'", 
                                                            "'~'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'>='", "'<='", 
                                                            "'>'", "'<'", 
                                                            "'=='", "'!='", 
                                                            "'&'", "'^'", 
                                                            "'|'", "'&&'", 
                                                            "'||'", "'?'", 
                                                            "':'", "'new'", 
                                                            "'true'", "'false'", 
                                                            "'null'", "'['", 
                                                            "']'", "'.'", 
                                                            null, "';'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "WS", 
                                                             "SEMI", "NUMBER", 
                                                             "HEX", "OCT", 
                                                             "BIN", "ID", 
                                                             "STRING", "BLOCK_COMMENT", 
                                                             "LINE_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "declarations", "classDeclaration", "members", "member", "variableDeclaration", 
		"functionDeclaration", "params", "statements", "blockStatement", "ifStatement", 
		"multiIfStatement", "elseStatement", "forStatement", "whileStatement", 
		"returnStatement", "continueStatement", "breakStatement", "expression", 
		"accessExpression", "arguments",
	];
	public get grammarFileName(): string { return "ScriptGrammar.g4"; }
	public get literalNames(): (string | null)[] { return ScriptGrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return ScriptGrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return ScriptGrammarParser.ruleNames; }
	public get serializedATN(): number[] { return ScriptGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, ScriptGrammarParser._ATN, ScriptGrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, ScriptGrammarParser.RULE_program);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 42;
			this.declarations(0);
			this.state = 43;
			this.match(ScriptGrammarParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public declarations(): DeclarationsContext;
	public declarations(_p: number): DeclarationsContext;
	// @RuleVersion(0)
	public declarations(_p?: number): DeclarationsContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: DeclarationsContext = new DeclarationsContext(this, this._ctx, _parentState);
		let _prevctx: DeclarationsContext = localctx;
		let _startState: number = 2;
		this.enterRecursionRule(localctx, 2, ScriptGrammarParser.RULE_declarations, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 51;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				{
				this.state = 46;
				this.classDeclaration();
				}
				break;
			case 10:
				{
				this.state = 47;
				this.functionDeclaration();
				}
				break;
			case 55:
				{
				this.state = 48;
				this.variableDeclaration();
				this.state = 49;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 57;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new DeclarationsContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, ScriptGrammarParser.RULE_declarations);
					this.state = 53;
					if (!(this.precpred(this._ctx, 4))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
					}
					this.state = 54;
					this.declarations(5);
					}
					}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public classDeclaration(): ClassDeclarationContext {
		let localctx: ClassDeclarationContext = new ClassDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, ScriptGrammarParser.RULE_classDeclaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this.match(ScriptGrammarParser.T__0);
			this.state = 61;
			this.match(ScriptGrammarParser.ID);
			this.state = 65;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				{
				this.state = 62;
				this.match(ScriptGrammarParser.T__1);
				this.state = 63;
				this.match(ScriptGrammarParser.ID);
				}
				break;
			case 3:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 67;
			this.match(ScriptGrammarParser.T__2);
			this.state = 70;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
			case 6:
			case 7:
			case 8:
			case 10:
			case 55:
				{
				this.state = 68;
				this.members(0);
				}
				break;
			case 4:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 72;
			this.match(ScriptGrammarParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public members(): MembersContext;
	public members(_p: number): MembersContext;
	// @RuleVersion(0)
	public members(_p?: number): MembersContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: MembersContext = new MembersContext(this, this._ctx, _parentState);
		let _prevctx: MembersContext = localctx;
		let _startState: number = 6;
		this.enterRecursionRule(localctx, 6, ScriptGrammarParser.RULE_members, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 75;
			this.member();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 81;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new MembersContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, ScriptGrammarParser.RULE_members);
					this.state = 77;
					if (!(this.precpred(this._ctx, 2))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
					}
					this.state = 78;
					this.members(3);
					}
					}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public member(): MemberContext {
		let localctx: MemberContext = new MemberContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, ScriptGrammarParser.RULE_member);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
				{
				this.state = 84;
				this.match(ScriptGrammarParser.T__4);
				}
				break;
			case 6:
				{
				this.state = 85;
				this.match(ScriptGrammarParser.T__5);
				}
				break;
			case 7:
				{
				this.state = 86;
				this.match(ScriptGrammarParser.T__6);
				}
				break;
			case 8:
			case 10:
			case 55:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 92;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 8:
				{
				this.state = 90;
				this.match(ScriptGrammarParser.T__7);
				}
				break;
			case 10:
			case 55:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
				{
				this.state = 94;
				this.functionDeclaration();
				}
				break;
			case 55:
				{
				this.state = 95;
				this.variableDeclaration();
				this.state = 96;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let localctx: VariableDeclarationContext = new VariableDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, ScriptGrammarParser.RULE_variableDeclaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 100;
			this.match(ScriptGrammarParser.ID);
			this.state = 101;
			this.match(ScriptGrammarParser.T__8);
			this.state = 102;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, ScriptGrammarParser.RULE_functionDeclaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 104;
			this.match(ScriptGrammarParser.T__9);
			this.state = 105;
			this.match(ScriptGrammarParser.ID);
			this.state = 113;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 11:
				{
				this.state = 106;
				this.match(ScriptGrammarParser.T__10);
				this.state = 109;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 55:
					{
					this.state = 107;
					this.params(0);
					}
					break;
				case 12:
					// tslint:disable-next-line:no-empty
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 111;
				this.match(ScriptGrammarParser.T__11);
				}
				break;
			case 3:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 115;
			this.blockStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public params(): ParamsContext;
	public params(_p: number): ParamsContext;
	// @RuleVersion(0)
	public params(_p?: number): ParamsContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ParamsContext = new ParamsContext(this, this._ctx, _parentState);
		let _prevctx: ParamsContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, ScriptGrammarParser.RULE_params, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 118;
			this.match(ScriptGrammarParser.ID);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 125;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new ParamsContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, ScriptGrammarParser.RULE_params);
					this.state = 120;
					if (!(this.precpred(this._ctx, 2))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
					}
					this.state = 121;
					this.match(ScriptGrammarParser.T__12);
					this.state = 122;
					this.params(3);
					}
					}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public statements(): StatementsContext;
	public statements(_p: number): StatementsContext;
	// @RuleVersion(0)
	public statements(_p?: number): StatementsContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: StatementsContext = new StatementsContext(this, this._ctx, _parentState);
		let _prevctx: StatementsContext = localctx;
		let _startState: number = 16;
		this.enterRecursionRule(localctx, 16, ScriptGrammarParser.RULE_statements, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 146;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 11:
			case 22:
			case 23:
			case 24:
			case 25:
			case 36:
			case 42:
			case 43:
			case 44:
			case 45:
			case 51:
			case 52:
			case 53:
			case 54:
			case 55:
			case 56:
				{
				this.state = 129;
				this.expression(0);
				this.state = 130;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			case 15:
				{
				this.state = 132;
				this.ifStatement();
				}
				break;
			case 16:
				{
				this.state = 133;
				this.forStatement();
				}
				break;
			case 18:
				{
				this.state = 134;
				this.whileStatement();
				}
				break;
			case 19:
				{
				this.state = 135;
				this.returnStatement();
				this.state = 136;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			case 20:
				{
				this.state = 138;
				this.continueStatement();
				this.state = 139;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			case 21:
				{
				this.state = 141;
				this.breakStatement();
				this.state = 142;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			case 3:
				{
				this.state = 144;
				this.blockStatement();
				}
				break;
			case 50:
				{
				this.state = 145;
				this.match(ScriptGrammarParser.SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 152;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new StatementsContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, ScriptGrammarParser.RULE_statements);
					this.state = 148;
					if (!(this.precpred(this._ctx, 10))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
					}
					this.state = 149;
					this.statements(11);
					}
					}
				}
				this.state = 154;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public blockStatement(): BlockStatementContext {
		let localctx: BlockStatementContext = new BlockStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, ScriptGrammarParser.RULE_blockStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			this.match(ScriptGrammarParser.T__2);
			this.state = 158;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 3:
			case 11:
			case 15:
			case 16:
			case 18:
			case 19:
			case 20:
			case 21:
			case 22:
			case 23:
			case 24:
			case 25:
			case 36:
			case 42:
			case 43:
			case 44:
			case 45:
			case 50:
			case 51:
			case 52:
			case 53:
			case 54:
			case 55:
			case 56:
				{
				this.state = 156;
				this.statements(0);
				}
				break;
			case 4:
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 160;
			this.match(ScriptGrammarParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let localctx: IfStatementContext = new IfStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, ScriptGrammarParser.RULE_ifStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this.multiIfStatement(0);
			this.state = 163;
			this.elseStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public multiIfStatement(): MultiIfStatementContext;
	public multiIfStatement(_p: number): MultiIfStatementContext;
	// @RuleVersion(0)
	public multiIfStatement(_p?: number): MultiIfStatementContext {
		if (_p === undefined) {
			_p = 0;
		}
